[tool.poetry]
name = "crypt_app"
version = "1.0.0"
description = ""
authors = ["Marko <zeratul@posteo.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.5"
django = "=1.11.16"
pycrypto = "^2.6"
m2crypto = "^0.30.1"
uwsgi = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
