[tool.poetry]
name = "crypt_app"
version = "1.0.0"
description = ""
authors = ["Marko <zeratul@posteo.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.5"
django = "=2.2.19"
pycrypto = "^2.6"
m2crypto = "^0.30.1"
uwsgi = "^2.0"
six = "^1.11"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
lxml = "^4.2"
pytest = "^3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
